# quickmark

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: CI.yml
benches/: plugins.rs
benches/fixtures/: spec.md
demos/making_plugin_example/: block_rule.rs  core_rule.rs  inline_rule.rs  main.rs
demos/wasm_demo/src/: lib.rs
python/quickmark/: __init__.py  cli.py  conversion.py  postprocess.py  quickmark.pyi
python/tests/: bench_tree.py  test_api.py  test_fixtures.py  test_postprocess.py  test_realworld.py
python/tests/fixtures/: deflist.md
src/: lib.rs  nodes.rs  plugin_config.rs
src/common/: ruler.rs  typekey.rs  utils.rs
src/generics/inline/: code_pair.rs  emph_pair.rs  full_link.rs
src/mdparser/: constants.rs  main.rs  mod.rs  node.rs  preprocess.rs  renderer.rs
src/mdparser/block/: mod.rs  rule.rs  state.rs
src/mdparser/block/builtin/: block_parser.rs
src/mdparser/core/: root.rs
src/mdparser/inline/: mod.rs  rule.rs  state.rs
src/mdparser/inline/builtin/: inline_parser.rs  skip_text.rs
src/plugins/: mod.rs  sourcepos.rs
src/plugins/autolinks/: email.rs  mod.rs  url.rs  utils.rs  www.rs
src/plugins/cmark/: mod.rs
src/plugins/cmark/block/: blockquote.rs  code.rs  fence.rs  heading.rs  hr.rs  lheading.rs  list.rs  paragraph.rs  reference.rs
src/plugins/cmark/inline/: autolink.rs  entity.rs  escape.rs  newline.rs
src/plugins/extra/: beautify_links.rs  front_matter.rs  gh_flavored_md.rs  github_slugger.rs  heading_anchors.rs  heading_anchors_old.rs  linkify.rs  mod.rs  smartquotes.rs  tables.rs  tasklist.rs  typographer.rs
src/plugins/footnote/: back_refs.rs  collect.rs  definitions.rs  inline.rs  mod.rs  references.rs
src/plugins/html/: html_block.rs  html_inline.rs  mod.rs
src/plugins/kagi_plugins/: citation.rs  contact_info.rs  image.rs  inkjet.rs  link.rs  math.rs  math_display.rs  math_inline.rs  mod.rs  nl2br.rs
tests/: test_api.py  test_cli.py  test_fixtures.py  test_kagi.py
tests/benchmarks/: bench_html.py  test-file.rs
tests/fixtures/: ast.md
tests/tests_rust/tests_autolink/: fixtures.rs
tests/tests_rust/tests_core/: commonmark.rs  extras.rs  linkify.rs  markdown-it-smartquotes.rs  markdown-it-typographer.rs  markdown-it.rs  pathological.rs  sourcemaps.rs
tests/tests_rust/tests_footnote/: fixtures.rs
tests/tests_rust/tests_front_matter/: fixtures.rs
tests/tests_rust/tests_heading_anchors/: fixtures.rs
tests/tests_rust/tests_tasklist/: fixtures.rs
