[package]
name = "quickmark"
version = "0.1.0"
edition = "2021"

[lib]
name = "quickmark"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = ["linkify"]

[dependencies]
# Dependencies from python shim
mime_guess = "2.0"
itertools = ">= 0.11"
# Dependencies from original markdown-it-rust
# TODO (matt): check to update
argparse     = ">= 0.2.1"
const_format = ">= 0.1.0"
derivative   = ">= 1.0.2"
derive_more = { version = ">= 2", features = ["deref", "deref_mut"] }
downcast-rs  = ">= 1.0.2"
entities     = ">= 0.1.0"
html-escape  = ">= 0.1.0"
linkify      = { version = ">= 0.5.0", optional = true }
mdurl        = ">= 0.3.1"
url          = ">= 2.5"
once_cell    = ">= 1.0.1"
readonly     = ">= 0.2.0"
regex        = ">= 1.0.0"
stacker      = ">= 0.1.2"
unicode_categories = ">= 0.1"
unicode-general-category = ">= 0.1.0"
pulldown-latex = "0.7.1"
fancy-regex = "0.15.0"
cached = "0.56.0"
inkjet = "0.11.1"
v_htmlescape = "0.15.8" # simd escaping - faster
phf = { version = "0.12.1", features = ["macros"] }

[dev-dependencies]
criterion = "0.7.0"
prettydiff  = ">= 0.6.4"
rstest      = ">= 0.24"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

[[bench]]
name    = "plugins"
harness = false

[dependencies.pyo3]
version = ">= 0.23"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
